Corrected grid gap in the gallery

--- a/src/style.css
+++ b/src/style.css
@@ -225,7 +225,7 @@ section {
 .grid-gallery {
   margin-top: 30px;
   grid-auto-rows: minmax(20vw, 160px);
-  grid-gap: 20px;
+  grid-gap: 10px;
 }
 
 .grid-gallery img {
